--- a/TrangCV/index.html
+++ b/TrangCV/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Trang CV cá nhân</h1>
 <p>
-    <img src="https://www.pinterest.com/pin/1688918605135833/" width="300" alt="Nguyễn Văn A">
+    <img src="26424f9d91d5679fafefaaeb8e06cb12 (1).jpg" width="300" alt="Nguyễn Văn A">
     <br/>Ảnh 3x4
 </p>
 <ol>
